--- a/index.html
+++ b/index.html
@@ -2,57 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Shtunder.com</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
 <div class="container">
+
     <div class="card">
+
         <div class="face face1">
             <div class="content">
                 <img src="data.png">
                 <h2>Code</h2>
             </div>
         </div>
+
         <div class="face face2">
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    mollitia non ad! Sequi, eaque!</p>
-                <a href="#">Learn More</a>
+                <p>To become a programmer you need to code.</p>
+                <a href="https://github.com/shtunder">Learn More</a>
             </div>
         </div>
+
     </div>
+
     <div class="card">
+
         <div class="face face1">
             <div class="content">
                 <img src="sketch.png">
                 <h2>Design</h2>
             </div>
         </div>
+
         <div class="face face2">
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    mollitia non ad! Sequi, eaque!</p>
+                <p>Have no fear of perfection - you'll never reach it.</p>
+                <!--Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                mollitia non ad! Sequi, eaque!-->
                 <a href="#">Learn More</a>
             </div>
         </div>
+
     </div>
+
     <div class="card">
+
         <div class="face face1">
             <div class="content">
                 <img src="startup.png">
                 <h2>Launch</h2>
             </div>
+
         </div>
+
         <div class="face face2">
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    mollitia non ad! Sequi, eaque!</p>
+                <p>The best way to predict the future is to create it.</p>
                 <a href="#">Learn More</a>
             </div>
         </div>
+
     </div>
+
 </div>
 </body>
 </html>
