--- a/index.html
+++ b/index.html
@@ -1,71 +1,30 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Shtunder.com</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.png" type="image/png">
-</head>
-<body>
-<div class="container">
-
-    <div class="card">
-
-        <div class="face face1">
-            <div class="content">
-                <img src="data.png">
-                <h2>Code</h2>
+    <head>
+        <title>Shtunder</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+              integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <link rel="icon" href="https://cdn1.iconfinder.com/data/icons/simple-icons/4096/microformats-4096-black.png">
+        <link rel="stylesheet" href="index.css"/>
+        <link rel="icon" href="favicon.png" type="image/png">
+        <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+    </head>
+    <body oncontextmenu="return false;" unselectable="on" onselectstart="return false;">
+        <canvas width="715" height="974"></canvas>
+        <div class="center wrapper">
+            <div class="title">
+                <p class="nickname">Shtunder</p>
+                <p class="lyrics"><nobr>Code & Things in Between</nobr></p>
             </div>
-        </div>
-
-        <div class="face face2">
-            <div class="content">
-                <p>To become a programmer you need to code.</p>
-                <a href="https://github.com/shtunder">Learn More</a>
+            <div class="links animated fadeInUp">
+                <a href="https://github.com/shtunder" target="_blank"><i class="fab fa-ms fa-github"></i></a>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-ms fa-youtube"></i></a>
+                <a href="https://vk.com/andrei.shtunder" target="_blank"><i class="fab fa-ms fa-vk"></i></a>
+                <a href="https://www.instagram.com/andrei.shtunder" target="_blank"><i class="fab fa-ms fa-instagram"></i></a>
+                <a href="https://t.me/andrei_shtunder" target="_blank"><i class="fab fa-ms fa-telegram"></i></a>
             </div>
+            <br>
         </div>
-
-    </div>
-
-    <div class="card">
-
-        <div class="face face1">
-            <div class="content">
-                <img src="sketch.png">
-                <h2>Design</h2>
-            </div>
-        </div>
-
-        <div class="face face2">
-            <div class="content">
-                <p>Have no fear of perfection - you'll never reach it.</p>
-                <!--Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                mollitia non ad! Sequi, eaque!-->
-                <a href="#">Learn More</a>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="card">
-
-        <div class="face face1">
-            <div class="content">
-                <img src="startup.png">
-                <h2>Launch</h2>
-            </div>
-
-        </div>
-
-        <div class="face face2">
-            <div class="content">
-                <p>The best way to predict the future is to create it.</p>
-                <a href="#">Learn More</a>
-            </div>
-        </div>
-
-    </div>
-
-</div>
-</body>
+        <script type="text/javascript" src="index.js"></script>
+    </body>
 </html>
