--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             </div>
             <br>
         </div>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="https://shtunder.com/index.js"></script>
     </body>
 </html>
