--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
               integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <link rel="icon" href="https://cdn1.iconfinder.com/data/icons/simple-icons/4096/microformats-4096-black.png">
-        <link rel="stylesheet" href="https://shtunder.com/index.css"/>
-        <link rel="icon" href="https://shtunder.com/favicon.png" type="image/png">
+        <link rel="stylesheet" href="https://www.shtunder.com/index.css"/>
+        <link rel="icon" href="https://www.shtunder.com/favicon.png" type="image/png">
         <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     </head>
     <body oncontextmenu="return false;" unselectable="on" onselectstart="return false;">
@@ -25,6 +25,6 @@
             </div>
             <br>
         </div>
-        <script type="text/javascript" src="https://shtunder.com/index.js"></script>
+        <script type="text/javascript" src="https://www.shtunder.com/index.js"></script>
     </body>
 </html>
